--- a/web/index.html
+++ b/web/index.html
@@ -12,7 +12,66 @@
 
 <main style="width: 100%; height: 100vh;">
 
-    <section id="WelcomePage" style="width: 100%; height: 100vh ;background-color: red"></section>
+    <section id="NavBar" >
+
+        <!-- Navbar -->
+        <nav class=" navbar-expand-lg navbar sticky-top" style="position: absolute; width: 100%">
+            <!-- Container wrapper -->
+            <div class="container">
+                <!-- Navbar brand -->
+                <a class="navbar-brand me-2" href="">
+                    <img src="assets/logo/car-rental-logo.png" height="50" alt="Car Rental Logo" loading="lazy" style="margin-top: -1px;"/>
+                </a>
+
+                <!-- Collapsible wrapper -->
+                <div class="collapse navbar-collapse" id="navbarButtonsExample">
+                    <!-- Left links -->
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Cars</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Services</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Blog</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Contact</a>
+                        </li>
+                    </ul>
+                    <!-- Left links -->
+
+                    <div class="d-flex align-items-center">
+                        <button type="button" class="btn btn-link px-3 me-2">
+                            Login
+                        </button>
+                        <button type="button" class="btn btn-primary me-3">
+                            Sign up for free
+                        </button>
+
+                    </div>
+                </div>
+                <!-- Collapsible wrapper -->
+            </div>
+            <!-- Container wrapper -->
+        </nav>
+        <!-- Navbar -->
+
+    </section>
+
+    <section id="WelcomePage" style="width: 100%; height: 100vh ;background-color: black">
+
+        <img src="assets/images/Koenigsegg%20Gemera_01%20copy.jpg" alt="bg image" style="width: 100%; height: 100vh">
+        
+    </section>
+
     <section id="LoginPage" style="width: 100%;height: 100vh ; background-color: blue"></section>
     <section id="ForgotPasswordPage" style="width: 100%;height: 100vh ; background-color: pink"></section>
     <section id="RegisterPage" style="width: 100%; background-color: yellow"></section>
