add background image

--- a/web/index.html
+++ b/web/index.html
@@ -20,7 +20,7 @@
             <div class="container">
                 <!-- Navbar brand -->
                 <a class="navbar-brand me-2" href="">
-                    <img src="assets/logo/car-rental-logo.png" height="50" alt="Car Rental Logo" loading="lazy" style="margin-top: -1px;"/>
+                    <img src="assets/logo/car%20rental%20logo.jpg" height="50" alt="Car Rental Logo" loading="lazy" style="margin-top: -1px;"/>
                 </a>
 
                 <!-- Collapsible wrapper -->
@@ -28,22 +28,22 @@
                     <!-- Left links -->
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Home</a>
+                            <a class="nav-link text-white" href="#">Home</a>
+                        </li>
+                        <li class="nav-item ">
+                            <a class="nav-link text-white" href="#">Cars</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Cars</a>
+                            <a class="nav-link text-white" href="#">Services</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Services</a>
+                            <a class="nav-link text-white" href="#">About</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">About</a>
+                            <a class="nav-link text-white" href="#">Blog</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Blog</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Contact</a>
+                            <a class="nav-link text-white" href="#">Contact</a>
                         </li>
                     </ul>
                     <!-- Left links -->
@@ -66,10 +66,16 @@
 
     </section>
 
-    <section id="WelcomePage" style="width: 100%; height: 100vh ;background-color: black">
+    <section id="WelcomePage" style="width: 100%; height: 100vh ;">
 
         <img src="assets/images/Koenigsegg%20Gemera_01%20copy.jpg" alt="bg image" style="width: 100%; height: 100vh">
-        
+
+        <div class="mask" style="background-color: rgba(0, 0, 0, 0.6);">
+            <div class="d-flex justify-content-center align-items-center " >
+                <h1 class="text-white mb-0">Page title</h1>
+            </div>
+        </div>
+
     </section>
 
     <section id="LoginPage" style="width: 100%;height: 100vh ; background-color: blue"></section>
