--- a/web/index.html
+++ b/web/index.html
@@ -5,10 +5,44 @@
     <title>Car Rental</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <script src="assets/bootstrap/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
     <link rel="stylesheet" href="assets/css/fonts/css/all.css">
+
     <link rel="stylesheet" href="style/Styles.css">
+
     <link rel=”stylesheet” href=”https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.5.0/css/bootstrap-datepicker3.min.css”>
     <link href="https://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.5.0/css/bootstrap-datepicker3.min.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Taviraj:ital,wght@1,300&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
+
+    <link rel=”stylesheet” href=”https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.5.0/css/bootstrap-datepicker3.min.css”>
+    <link href="https://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.5.0/css/bootstrap-datepicker3.min.css">
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+    <!-- Include Moment.js CDN -->
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.9.0/moment.min.js"></script>
+    <!-- Include Bootstrap DateTimePicker CDN -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.37/css/bootstrap-datetimepicker.min.css" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.37/js/bootstrap-datetimepicker.min.js"></script>
+
+    <!-- Popperjs -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.2/dist/umd/popper.min.js" crossorigin="anonymous"></script>
+    <!-- Tempus Dominus JavaScript -->
+    <script src="https://cdn.jsdelivr.net/gh/Eonasdan/tempus-dominus@master/dist/js/tempus-dominus.js" crossorigin="anonymous"></script>
+    <!-- Tempus Dominus Styles -->
+    <link href="https://cdn.jsdelivr.net/gh/Eonasdan/tempus-dominus@master/dist/css/tempus-dominus.css" rel="stylesheet" crossorigin="anonymous">
+
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.37/css/bootstrap-datetimepicker.min.css" rel="stylesheet">
+
+    <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.5.0/css/bootstrap-datepicker3.min.css">
 
 </head>
@@ -20,7 +54,7 @@
     <section id="NavBar" >
 
         <!-- Navbar -->
-        <nav class=" navbar-expand-lg navbar sticky-top" style="position: absolute; width: 100%">
+        <nav class=" navbar-expand-lg navbar sticky-top" style="position: absolute; width: 100%;">
             <!-- Container wrapper -->
             <div class="container">
                 <!-- Navbar brand -->
@@ -32,28 +66,28 @@
                 <div class="collapse navbar-collapse" id="navbarButtonsExample">
                     <!-- Left links -->
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
+                        <li class="nav-item" style="padding-right: 10px;">
                             <a class="nav-link " href="#">Home</a>
                         </li>
-                        <li class="nav-item ">
+                        <li class="nav-item " style="padding-right: 10px;">
                             <a class="nav-link" href="#">Cars</a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item" style="padding-right: 10px;">
                             <a class="nav-link " href="#">Services</a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item" style="padding-right: 10px;">
                             <a class="nav-link " href="#">About</a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item" style="padding-right: 10px;">
                             <a class="nav-link " href="#">Blog</a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item" style="padding-right: 10px;">
                             <a class="nav-link " href="#">Contact</a>
                         </li>
                     </ul>
                     <!-- Left links -->
 
-                    <div class="d-flex align-items-center">
+                    <div class="d-flex align-items-center loginBar">
                         <button type="button" class="btn btn-link px-3 me-2 text-white">
                             Login
                         </button>
@@ -73,56 +107,77 @@
 
     <!--Welcome Page-->
     <section id="WelcomePage" style="width: 100%; height: 100vh ;">
+
         <div class="mask" style="background-color: rgba(0, 0, 0, 0.3);">
             <div class="heading d-flex justify-content-center align-items-center h-100">
-                <p class="text-white mb-0" style="font-size: 45px">MAKE YOUR TRIP AWESOME</p>
+                <p class="text-white mb-0" style="font-size: 45px; font-family: 'Taviraj', serif;">MAKE YOUR TRIP AWESOME</p>
             </div>
         </div>
 
-        <div class="chooseData bg-white w-75 h-25">
+        <div class="chooseData w-75 h-25">
 
-            <div class="row">
-                <div class="col w-25 bg-success me-5 mt-4">
+           <div class="row">
+                <div class="col w-25 ">
                     <div class="container ">
-                        <label style="font-size: 15px">Pickup Date</label>
-                        <div class="input-group date" style="width: 200px">
-                            <input type="text" class="form-control"><span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
+                        <label style="font-size: 15px" for="pickUpDate" class="text-white">Pickup Date</label>
+                        <div class="input-group date" style="width: 250px">
+                            <input type="text" id="pickUpDate" class="form-control">
+                            <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
                         </div>
                     </div>
                 </div>
 
-                <div class="col w-25 bg-danger me-5 mt-4">
-                    <div class="form-outline timepicker-inline-12">
-                        <label class="form-label" for="form41">Select a time</label>
-                        <input type="text" class="form-control" id="form41" />
-                    </div>
-                </div>
-
-                <div class="col w-25 bg-primary me-5 mt-4">
+                <div class="col w-25 ">
                     <div class="container">
-                        <label style="font-size: 15px">Return Date</label>
-                        <div class="input-group date " style="width: 200px">
-                            <input type="text" class="form-control"><span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
+                        <label class="form-label text-white" for="pickUpTime"  style="font-size: 15px">Return Time</label>
+                        <div style="position: relative;width: 250px" >
+                            <input class="form-control" type="text" id="pickUpTime"/>
                         </div>
                     </div>
                 </div>
 
-                <div class="col w-25 bg-warning me-5 mt-4">
+                <div class="col w-25 ">
+                    <div class="container">
+                        <label style="font-size: 15px" for="returnDate" class="text-white">Return Date</label>
+                        <div class="input-group date " style="width: 250px">
+                            <input type="text" id="returnDate" class="form-control"><span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
+                        </div>
+                    </div>
+                </div>
 
+                <div class="col w-25 ">
+                    <div class="container">
+                        <label class="form-label text-white" for="returnTime"  style="font-size: 15px">Return Time</label>
+                        <div style="position: relative;width: 250px" >
+                            <input class="form-control" type="text" id="returnTime"/>
+                        </div>
+                    </div>
                 </div>
 
             </div>
 
             <div class="row">
 
-                <div class="col w-50 me-5 bg-primary mt-3">
-                    <h1>11</h1>
+                <div class="col w-50 mt-3">
+                    <div class="form-outline me-5">
+                        <label class="form-label text-white" for="pickUpLocation">Pickup Location</label>
+                        <input type="text" id="pickUpLocation" class="form-control" />
+                    </div>
                 </div>
 
-                <div class="col w-50 me-5 bg-danger mt-3">
-
+                <div class="col w-50 mt-3">
+                    <div class="form-outline me-5">
+                        <label class="form-label text-white" for="returnLocation">Return Location</label>
+                        <input type="text" id="returnLocation" class="form-control" />
+                    </div>
                 </div>
 
+            </div>
+
+            <div class="row mt-5 ">
+                <div class="text-center">
+                    <button type="button" class="btn btn-warning btn-rounded w-25">MAKE RESERVATION</button>
+                </div>
             </div>
 
         </div>
@@ -148,10 +203,17 @@
 
 <script src="assets/jquery/jquery-3.6.0.min.js"></script>
 <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-<script type=’text/javascript’ src=”https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.5.0/js/bootstrap-datepicker.min.js”></script>
+
+<!--for time picker-->
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.9.0/moment.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.37/js/bootstrap-datetimepicker.min.js"></script>
+
+<!--for date picker-->
 <script src="https://netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
-<script type='text/javascript' src='//code.jquery.com/jquery-1.8.3.js'></script>
 <script type='text/javascript' src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.5.0/js/bootstrap-datepicker.min.js"></script>
+
 <script >
     $(function(){
         $('.input-group.date').datepicker({
@@ -161,13 +223,17 @@
             todayHighlight: true,
             toggleActive: true
         });
+
     });
 
-    const pickerInline = document.querySelector('.timepicker-inline-12');
-    const timepickerMaxMin = new mdb.Timepicker(pickerInline, {
-        format12:true,
-        inline: true
+    $('#returnTime').datetimepicker({
+        format: 'HH:mm'
     });
+
+    $('#pickUpTime').datetimepicker({
+        format: 'HH:mm'
+    });
+
 
 </script>
 </body>
