add payment pages

--- a/web/index.html
+++ b/web/index.html
@@ -515,7 +515,10 @@
                             <div class="form-outline mb-2 ms-4 me-4">
                                 <label class="form-label text-white fw-light" for="brand" style="font-family: 'Edu VIC WA NT Beginner', cursive;font-size: 18px;">Brand</label>
                                 <select aria-label="Default select example" class="form-select shadow" style="height: 32px" id="brand">
-                                    <option selected></option>
+                                    <option selected value="0">None</option>
+                                    <option value="1">Susuki</option>
+                                    <option value="2">Audi</option>
+                                    <option value="3">BMW</option>
                                 </select>
                             </div>
                         </div>
